<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:binding="http://robobinding.org/robobinding.android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/welcome"
    	style="@style/ScreenTitle" />
    
    <Button
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/cursor_backed_albums"
    	binding:onClick="cursorBackedAlbums" />
    	
    <Button
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/list_backed_albums"
    	binding:onClick="listBackedAlbums" />
    	
    <Button
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/spinner_albums"
    	binding:onClick="listBackedSpinnerAlbums" />
    
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/the_choice_is_yours"
    	android:gravity="center" />
    	
</LinearLayout>
