<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:bind="http://robobinding.org/android"
  xmlns:rs="http://robobinding.sample/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/window_title"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/view_albums"
	    style="@style/ScreenTitle" />
    
    <sample.robobinding.customwidget.NavigationBar
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_alignParentBottom="true"
	    bind:leftButtonAction="createAlbum"
	    rs:leftButtonLabel="@string/create"
	    bind:rightButtonAction="viewAlbum"
	    rs:rightButtonLabel="@string/view" />
    
    <Spinner 
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/window_title"
  		bind:itemLayout="@layout/spinner_album_row"
  		bind:dropdownLayout="@layout/spinner_album_dropdown_row"
  		bind:source="{albums}"
  		bind:onItemSelected="albumSelected"
  		bind:enabled="{viewAlbumFieldsEnabled}" />
    
</RelativeLayout>
