<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:bind="http://robobinding.org/android"
  xmlns:rs="http://schemas.android.com/apk/res/sample.robobinding"
  android:layout_width="match_parent"
  android:layout_height="match_parent" >
    
    <TextView android:id="@+id/window_title"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/view_albums"
	    style="@style/ScreenTitle" />
    
    <sample.robobinding.customview.NavigationBar
        android:id="@+id/navigation_bar"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_alignParentBottom="true"
	    bind:leftButtonAction="createAlbum"
	    bind:rightButtonAction="viewAlbum"
	    rs:leftButtonLabel="@string/create"
	    rs:rightButtonLabel="@string/view"
	    style="@android:style/ButtonBar" />
    
    <Spinner 
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/window_title"
  		bind:itemLayout="@android:layout/simple_spinner_item"
  		bind:itemMapping="[text1.text:{title}]"
  		bind:dropdownLayout="@android:layout/simple_spinner_dropdown_item"
  		bind:dropdownMapping="[text1.text:{title}]"
  		bind:source="{albums}"
  		bind:onItemSelected="albumSelected"
  		bind:enabled="{viewAlbumFieldsEnabled}" />
    
</RelativeLayout>
