<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:bind="http://robobinding.org/android"
  xmlns:rs="http://schemas.android.com/apk/res/sample.robobinding"
  android:layout_width="match_parent"
  android:layout_height="match_parent" >
    
    <TextView android:id="@+id/window_title"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/view_albums"
	    style="@style/ScreenTitle" />
    
    <sample.robobinding.customview.NavigationBar
        android:id="@+id/navigation_bar"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_alignParentBottom="true"
	    bind:leftButtonAction="createAlbum"
	    rs:leftButtonLabel="@string/create"
	    rs:rightButtonVisible="false"
	    style="@android:style/ButtonBar" />
    
    <Button android:id="@+id/toggle_button"
    	android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/window_title"
  		android:layout_alignParentRight="true"
  		android:text="@string/toggle_itemlayout"
  		bind:onClick="updateItemLayout" />
    
    <Spinner 
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/toggle_button"
  		bind:itemLayout="@layout/spinner_album_row"
  		bind:dropdownLayout="{itemLayout}"
  		bind:source="{albums}"
  		bind:onItemSelected="albumSelected"
  		bind:enabled="{viewAlbumFieldsEnabled}" />
    
</RelativeLayout>
